<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="8dp"
    android:paddingRight="10dp"
    android:paddingBottom="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/month_all_widget_previous"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/widget_nav_button"
            android:gravity="center"
            android:text="‹"
            android:textColor="#596174"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/month_all_widget_title"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:text="@string/widget_default_title"
            android:textColor="#1F2533"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/month_all_widget_group"
            android:layout_width="45dp"
            android:layout_height="32dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/widget_group_chip"
            android:gravity="center"
            android:maxLines="1"
            android:text="A조"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/month_all_widget_next"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/widget_nav_button"
            android:gravity="center"
            android:text="›"
            android:textColor="#596174"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/month_all_widget_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/month_all_widget_calendar_description"
        android:scaleType="fitCenter" />

    <!--
        아래 한 줄이 4개 조 띠의 주간 이동을 담당합니다.
        전용 줄을 따로 두었더니 화살표 버튼 줄이 위아래로 겹쳐 툴바처럼 보였습니다.
        요약 문구 양옆에 화살표를 붙여 줄 수를 원래대로 둘로 유지합니다.
        (위 화살표 = 달 이동, 아래 화살표 = 주 이동, 가운데를 누르면 오늘로)
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/month_all_widget_week_previous"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:background="@drawable/widget_nav_button"
            android:gravity="center"
            android:text="‹"
            android:textColor="#596174"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/month_all_widget_footer"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/widget_footer_background"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/month_all_widget_open_hint"
            android:textColor="#525D73"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/month_all_widget_week_next"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:background="@drawable/widget_nav_button"
            android:gravity="center"
            android:text="›"
            android:textColor="#596174"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
